# cuda-boids-simulation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml
res/: basic.frag  basic.vert  boid.frag  boid.vert  boids.vert  obstacles.vert
src/: boid.cpp  boid.hpp  boids.cpp  boids.hpp  boids_cpu.cpp  boids_cpu.hpp  boids_cuda.cu  boids_cuda.h  boids_cuda.hpp  camera.cpp  camera.hpp  gl_debug.h  main.cpp  primitives.cpp  primitives.h  shader_program.cpp  shader_program.hpp
